// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`facepaint array values with selectors 1`] = `
.glamor-0 .current-index {
  color: blue;
  margin-right: 15px;
  display: none;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
}

@media (min-width:420px) {
  .glamor-0 .current-index {
    color: red;
  }
}

@media (min-width:420px) {
  .glamor-0 .current-index {
    display: block;
  }
}

<div
  className="glamor-0"
>
  <div
    className="foo"
  >
    foo
  </div>
  function
</div>
`;

exports[`facepaint array values with selectors 2`] = `
".css-1ot4erq .current-index {
  color: blue;
  margin-right: 15px;
  display: none;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
}

@media (min-width:420px) {
  .css-1ot4erq .current-index {
    color: red;
  }
}

@media (min-width:420px) {
  .css-1ot4erq .current-index {
    display: block;
  }
}"
`;

exports[`facepaint basic 1`] = `
.glamor-0 {
  color: red;
}

@media (min-width:420px) {
  .glamor-0 {
    color: green;
  }
}

@media (min-width:920px) {
  .glamor-0 {
    color: blue;
  }
}

@media (min-width:1120px) {
  .glamor-0 {
    color: darkorchid;
  }
}

<div
  className="glamor-0"
>
  Basic
</div>
`;

exports[`facepaint basic 2`] = `
".css-xee1ha {
  color: red;
}

@media (min-width:420px) {
  .css-xee1ha {
    color: green;
  }
}

@media (min-width:920px) {
  .css-xee1ha {
    color: blue;
  }
}

@media (min-width:1120px) {
  .css-xee1ha {
    color: darkorchid;
  }
}"
`;

exports[`facepaint boolean, null, and undefined values 1`] = `
.glamor-0 {
  color: blue;
  color: red;
}

<div
  className="glamor-0"
>
  <div
    className="foo"
  >
    foo
  </div>
  function
</div>
`;

exports[`facepaint boolean, null, and undefined values 2`] = `
".css-dhb7kq {
  color: blue;
  color: red;
}"
`;

exports[`facepaint holes 1`] = `
.glamor-0 {
  color: red;
}

@media (min-width:920px) {
  .glamor-0 {
    color: blue;
  }
}

@media (min-width:1120px) {
  .glamor-0 {
    color: darkorchid;
  }
}

<div
  className="glamor-0"
>
  Basic
</div>
`;

exports[`facepaint holes 2`] = `
".css-196uzh {
  color: red;
}

@media (min-width:920px) {
  .css-196uzh {
    color: blue;
  }
}

@media (min-width:1120px) {
  .css-196uzh {
    color: darkorchid;
  }
}"
`;

exports[`facepaint multiple 1`] = `
.glamor-0 {
  color: red;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:420px) {
  .glamor-0 {
    color: green;
    display: block;
  }
}

@media (min-width:920px) {
  .glamor-0 {
    color: blue;
    display: inline-block;
  }
}

@media (min-width:1120px) {
  .glamor-0 {
    color: darkorchid;
    display: table;
  }
}

<div
  className="glamor-0"
>
  multiple
</div>
`;

exports[`facepaint multiple 2`] = `
".css-egce6e {
  color: red;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:420px) {
  .css-egce6e {
    color: green;
    display: block;
  }
}

@media (min-width:920px) {
  .css-egce6e {
    color: blue;
    display: inline-block;
  }
}

@media (min-width:1120px) {
  .css-egce6e {
    color: darkorchid;
    display: table;
  }
}"
`;

exports[`facepaint nested 1`] = `
.glamor-0 {
  background-color: hotpink;
  text-align: center;
  width: 25%;
}

.glamor-0 .foo {
  color: red;
}

.glamor-0 .foo img {
  height: 10px;
}

@media (min-width:420px) {
  .glamor-0 {
    width: 50%;
  }
}

@media (min-width:920px) {
  .glamor-0 {
    width: 75%;
  }
}

@media (min-width:1120px) {
  .glamor-0 {
    width: 100%;
  }
}

@media (min-width:420px) {
  .glamor-0 .foo {
    color: green;
  }
}

@media (min-width:920px) {
  .glamor-0 .foo {
    color: blue;
  }
}

@media (min-width:1120px) {
  .glamor-0 .foo {
    color: darkorchid;
  }
}

@media (min-width:420px) {
  .glamor-0 .foo img {
    height: 15px;
  }
}

@media (min-width:920px) {
  .glamor-0 .foo img {
    height: 20px;
  }
}

@media (min-width:1120px) {
  .glamor-0 .foo img {
    height: 25px;
  }
}

<div
  className="glamor-0"
>
  <div
    className="foo"
  >
    foo
  </div>
  function
</div>
`;

exports[`facepaint nested 2`] = `
".css-rbuh8g {
  background-color: hotpink;
  text-align: center;
  width: 25%;
}

@media (min-width:420px) {
  .css-rbuh8g {
    width: 50%;
  }
}

@media (min-width:920px) {
  .css-rbuh8g {
    width: 75%;
  }
}

@media (min-width:1120px) {
  .css-rbuh8g {
    width: 100%;
  }
}

.css-rbuh8g .foo {
  color: red;
}

@media (min-width:420px) {
  .css-rbuh8g .foo {
    color: green;
  }
}

@media (min-width:920px) {
  .css-rbuh8g .foo {
    color: blue;
  }
}

@media (min-width:1120px) {
  .css-rbuh8g .foo {
    color: darkorchid;
  }
}

.css-rbuh8g .foo img {
  height: 10px;
}

@media (min-width:420px) {
  .css-rbuh8g .foo img {
    height: 15px;
  }
}

@media (min-width:920px) {
  .css-rbuh8g .foo img {
    height: 20px;
  }
}

@media (min-width:1120px) {
  .css-rbuh8g .foo img {
    height: 25px;
  }
}"
`;

exports[`facepaint nested arrays 1`] = `
.glamor-0 {
  color: red;
}

@media (min-width:420px) {
  .glamor-0 {
    color: blue;
  }
}

@media (min-width:920px) {
  .glamor-0 {
    color: darkorchid;
  }
}

<div
  className="glamor-0"
>
  Basic
</div>
`;

exports[`facepaint nested arrays 2`] = `
".css-1faqh3h {
  color: red;
}

@media (min-width:420px) {
  .css-1faqh3h {
    color: blue;
  }
}

@media (min-width:920px) {
  .css-1faqh3h {
    color: darkorchid;
  }
}"
`;

exports[`facepaint pseudo 1`] = `
.glamor-0 {
  background-color: hotpink;
  text-align: center;
  width: 25%;
}

.glamor-0:hover {
  width: 50%;
}

.glamor-0:active {
  width: 75%;
}

.glamor-0:focus {
  width: 100%;
}

.glamor-0 .foo {
  color: red;
}

.glamor-0 .foo:hover {
  color: green;
}

.glamor-0 .foo:active {
  color: blue;
}

.glamor-0 .foo:focus {
  color: darkorchid;
}

.glamor-0 .foo img {
  height: 10px;
}

.glamor-0 .foo img:hover {
  height: 15px;
}

.glamor-0 .foo img:active {
  height: 20px;
}

.glamor-0 .foo img:focus {
  height: 25px;
}

<div
  className="glamor-0"
>
  <div
    className="foo"
  >
    foo
  </div>
  function
</div>
`;

exports[`facepaint pseudo 2`] = `
".css-1guvnfu {
  background-color: hotpink;
  text-align: center;
  width: 25%;
}

.css-1guvnfu:hover {
  width: 50%;
}

.css-1guvnfu:active {
  width: 75%;
}

.css-1guvnfu:focus {
  width: 100%;
}

.css-1guvnfu .foo {
  color: red;
}

.css-1guvnfu .foo:hover {
  color: green;
}

.css-1guvnfu .foo:active {
  color: blue;
}

.css-1guvnfu .foo:focus {
  color: darkorchid;
}

.css-1guvnfu .foo img {
  height: 10px;
}

.css-1guvnfu .foo img:hover {
  height: 15px;
}

.css-1guvnfu .foo img:active {
  height: 20px;
}

.css-1guvnfu .foo img:focus {
  height: 25px;
}"
`;

exports[`facepaint repeating 1`] = `
.glamor-0 {
  color: red;
}

@media (min-width:420px) {
  .glamor-0 {
    color: blue;
  }
}

@media (min-width:11200px) {
  .glamor-0 {
    color: darkorchid;
  }
}

<div
  className="glamor-0"
>
  Basic
</div>
`;

exports[`facepaint repeating 2`] = `
".css-nhhz1q {
  color: red;
}

@media (min-width:420px) {
  .css-nhhz1q {
    color: blue;
  }
}

@media (min-width:11200px) {
  .css-nhhz1q {
    color: darkorchid;
  }
}"
`;

exports[`facepaint undefined 1`] = `
.glamor-0 {
  color: red;
}

@media (min-width:920px) {
  .glamor-0 {
    color: blue;
  }
}

@media (min-width:1120px) {
  .glamor-0 {
    color: darkorchid;
  }
}

<div
  className="glamor-0"
>
  Basic
</div>
`;

exports[`facepaint undefined 2`] = `
".css-196uzh {
  color: red;
}

@media (min-width:920px) {
  .css-196uzh {
    color: blue;
  }
}

@media (min-width:1120px) {
  .css-196uzh {
    color: darkorchid;
  }
}"
`;
